# polars-cookbook

./: .gitignore  pyproject.toml
ch01-polars-dataframe/: hello.py  polars-dataframe.ipynb  pyproject.toml
ch02-reading-writing-files/: pyproject.toml  read_csv.py  read_delta.py  read_parquet.py  reading-writing-files.ipynb
ch02-reading-writing-files/.ipynb_checkpoints/: reading-writing-files-checkpoint.ipynb
