[project]
name = "polars-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=0.23.2",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
]

[tool.uv.workspace]
members = ["ch01-polars-dataframe", "ch02-reading-writing-files"]
